// Copyright 2020 Lennart Espe
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tavern;

service Tavern {
    rpc List(ListRequest) returns (ListResponse) {}
    rpc Announce(AnnounceRequest) returns (AnnounceResponse) {}
}

message Peer {
    string addr = 1;
}

message ListResponse {
    repeated Peer peers = 1;
    int64 interval = 2;
}

message ListRequest {
    bytes hash = 1;
}

message AnnounceRequest {
    bytes hash = 1;
    string addr = 2;
}

message AnnounceResponse {
    int64 interval = 1;
}
