// Copyright 2020 Lennart Espe
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';

package tracker;

message Tracker {
    string addr = 1;
    bytes hash = 2;
    string name = 3;
    int64 size = 4;
    int64 chunkSize = 5;
    repeated bytes chunkHashes = 6;
}